benchmarks: use Concurrent Mark and Sweep GC for benchmark worker